--- a/public/login form.html
+++ b/public/login form.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Login-Page</title>
     <link href="C:\Users\Sahil. Gopani\Desktop\Hackathon/sign-up.html" type="sign-up/html">
 </head>
 <body>
